  (Xavier Leroy, review by Guillaume Munch-Maccagnoni)

- #9428: Fix truncated exception backtrace for C->OCaml callbacks
  on Power and Z System
  (Xavier Leroy, review by Nicolás Ojeda Bär)

- #9623, #9642: fix typing environments in Typedecl.transl_with_constraint
  (Gabriel Scherer, review by Jacques Garrigue and Leo White,
   report by Hugo Heuzard)

OCaml 4.10 maintenance branch
-----------------------------

### Runtime system:

- #9344, #9368: Disable exception backtraces in bytecode programs
  built with "-output-complete-exe". At the moment, such programs do
  not embed debug information and exception backtraces where causing
  them to crash.
  (Jérémie Dimino, review by Nicolás Ojeda Bär)

### Build system:

- #9531: fix support for the BFD library on FreeBSD
  (Hannes Mehnert, review by Gabriel Scherer and David Allsopp)

### Bug fixes:

- #9068, #9437: ocamlopt -output-complete-obj failure on FreeBSD 12
  (Xavier Leroy, report by Hannes Mehnert, review by Sébastien Hinderer)

- #9165: Add missing -function-sections and -O3 flags in Makefiles.
  (Greta Yorsh, review by David Allsopp)

- #9495: fix a bug where bytecode binaries compiled with `-output-complete-exe`
  would not execute `at_exit` hooks at program termination (in particular,
  output channels would not be flushed).
  (Nicolás Ojeda Bär, review by David Allsopp)

OCaml 4.10.0 (21 February 2020)
-------------------------------

(Changes that can break existing programs are marked with a "*")

### Language features

- #7757, #1726: multi-indices for extended indexing operators:
  `a.%{0;1;2}` desugars to `( .%{ ;.. } ) a [|0;1;2|]`
  (Florian Angeletti, review by Gabriel Radanne)

* #1859, #9117: enforce safe (immutable) strings by removing
  the -unsafe-string option by default. This can be overridden by
  a configure-time option (available since 4.04 in 2016):
  --disable-force-safe-string since 4.08, -no-force-safe-since
  between 4.07 and 4.04.