@@ -712,6 +712,9 @@ OCaml 4.11
   (Gabriel Scherer, review by Jacques Garrigue and Leo White,
    report by Hugo Heuzard)
 
+- #9695: no error when opening an alias to a missing module
+  (Jacques Garrigue, report by Gabriel Scherer)
+
 OCaml 4.10 maintenance branch
 -----------------------------
 
